--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<p>hello</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>小米商城-Xiaomi 12、Redmi K50、小米电视官方网站
+    </title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="top-header">
+        <div class="container">
+            <div class="top-left">
+                <ul>
+                    <li>小米官网</li>
+                    <li>小米商城</li>
+                    <li>MUI</li>
+                    <li>loT</li>
+                    <li>云服务</li>
+                    <li>天星数科</li>
+                    <li>有品</li>
+                    <li>小爱开放平台</li>
+                    <li>企业团购</li>
+                    <li>资质证照</li>
+                    <li>协议规则</li>
+                    <li>下载app</li>
+                    <li>Select Location</li>
+                </ul>
+            </div>
+            <div class="top-right">
+                <div class="item" style="background-color: #424242; padding: 0 30px; color: #b0b0b0;">购物车(0)</div>
+                <div class="item">通知消息</div>
+                <div class="item">注册</div>
+                <div class="item">登录</div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
+
+</html>
+
